--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppMatematicas">
-        <activity android:name=".ResultadoFinalActivity"></activity>
-        <activity android:name=".view.UiProtoipoActivity" />
-        <activity android:name=".autenticación.IdentificateActivity">
+        <activity android:name=".view.EncuentraNumeroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".ResultadoFinalActivity" />
+        <activity android:name=".view.UiProtoipoActivity" />
+        <activity android:name=".autenticación.IdentificateActivity">
 
         </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
