--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.daniel.appmatematicas">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,15 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppMatematicas">
-        <activity android:name=".view.EncuentraNumeroActivity">
-
-        </activity>
+        <activity android:name=".view.ColorActivity"></activity>
+        <activity android:name=".view.EncuentraNumeroActivity"></activity>
         <activity android:name=".ResultadoFinalActivity" />
         <activity android:name=".view.UiProtoipoActivity" />
-        <activity android:name=".autenticación.IdentificateActivity">
-
-        </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".autenticación.IdentificateActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".autenticación.auth.AccessRelato">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,31 +24,29 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".autenticación.auth.ForgetPassword"></activity>
-
-        <activity android:name=".autenticación.auth.Register"></activity>
-
+        <activity android:name=".autenticación.auth.ForgetPassword" />
+        <activity android:name=".autenticación.auth.Register" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+            android:value="@string/facebook_app_id" />
+
         <activity
             android:name="com.facebook.FacebookActivity"
-            android:configChanges= "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
     </application>
-
-
 
 </manifest>
